--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
     <title>Beauty-Center Roswitha Haas</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="header">
         <div class="row align-items-center">
           <div class="col-6">
             <img src="images/logo_beauty.png" alt="Logo Beaty-Center" />
           </div>
           <div class="col-6 navigation">
-            <a href="index.html">Start</a>
-            <a href="index.html">Behandlungen</a>
-            <a href="index.html">Galerie</a>
-            <a href="index.html">Über uns</a>
+            <a href="index.html" class="navigation-item">Start</a>
+            <a href="#behandlungen" class="navigation-item">Behandlungen</a>
+            <a href="#ueber-uns" class="navigation-item">Über uns</a>
+            <a href="#preise" class="navigation-item">Preise</a>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="row">
+      <div class="row" id="behandlungen">
         <div class="col">
           <h3>Behandlungen für Sie und Ihn</h3>
           <p>
@@ -107,7 +107,7 @@
           </p>
         </div>
       </div>
-      <div class="row ueber-uns">
+      <div class="row" id="ueber-uns">
         <div class="col">
           <h4>Über uns</h4>
           <p>
@@ -122,7 +122,11 @@
             fundierten Ausbildung in einem renomierten Kosmetikstudio erhalten
             Sie bei uns auch eine individuelle Beratung und viele Pflegetipps.
           </p>
-          <img src="images/ueber-uns.jpg" alt="Unsere Kosmetikerinnen" />
+          <img
+            src="images/ueber-uns.jpg"
+            alt="Unsere Kosmetikerinnen"
+            id="kosmetikerinnen"
+          />
         </div>
         <div class="col">
           <h4>So finden Sie uns</h4>
@@ -135,6 +139,21 @@
           </p>
         </div>
       </div>
+      <div class="row" id="preise">
+        <div class="col">
+          <h4>Preise</h4>
+          <p>Hier finden Sie unsere aktuelle Preisliste:</p>
+        </div>
+      </div>
+      <footer>
+        <div class="row">
+          <div class="col-7">
+            Beauty-Center Roswitha Haas | Gärtnerstraße 28/1 | 77933 Lahr |
+            Tel.: 07821 / 98 266 23
+          </div>
+          <div class="col-5 impressum-datenschutz">Impressum | Datenschutz</div>
+        </div>
+      </footer>
     </div>
     <!--Bootstrap JS-->
     <script
