Improved spacing & added price list

--- a/index.html
+++ b/index.html
@@ -84,20 +84,24 @@
       </div>
       <div class="row" id="behandlungen">
         <div class="col">
-          <h3>Behandlungen für Sie und Ihn</h3>
+          <h1>Behandlungen für Sie und Ihn</h1>
           <p>
             Unterstreichen Sie Ihre positive Ausstrahlung, genießen Sie einen
             besonderen Entspannungsmoment - und tun Sie sich selbst etwas Gutes:
             Mit einer hochwertigen Gesichts- und Körperpflege in unserem
-            Beauty-Center bringen Sie neuen Schwung in Ihren Alltag. Speziell
-            für „Ihn“ Besonders viel Stress im Job, immer aktiv, manchmal zu
-            wenig Schlaf – und doch legen Sie großen Wert auf ein gepflegtes,
-            vitales Äußeres? In unserem Studio erhält auch anspruchsvolle
-            Männerhaut die Energie zurück, die ihr Tag für Tag genommen wird.
+            Beauty-Center bringen Sie neuen Schwung in Ihren Alltag.
+            <br />
+            <br />
+            <strong>Speziell für „Ihn“</strong>
+            <br />
+            Besonders viel Stress im Job, immer aktiv, manchmal zu wenig Schlaf
+            – und doch legen Sie großen Wert auf ein gepflegtes, vitales
+            Äußeres? In unserem Studio erhält auch anspruchsvolle Männerhaut die
+            Energie zurück, die ihr Tag für Tag genommen wird.
           </p>
         </div>
         <div class="col">
-          <h3>Aktuelle Angebote</h3>
+          <h1>Aktuelle Angebote</h1>
           <p>
             Neu in unserem Beauty-Center: die Pflegebehandlungen von Clarins.
             Mit den hochwertigen Produkten, in Kombination mit unserer Erfahrung
@@ -109,18 +113,28 @@
       </div>
       <div class="row" id="ueber-uns">
         <div class="col">
-          <h4>Über uns</h4>
+          <h2>Über uns</h2>
           <p>
-            Entdecken Sie Entspannung, lassen Sie den Alltag einfach hinter sich
-            - und gönnen Sie sich etwas Zeit für Ihr individuelles Wohlbefinden!
+            <strong>
+              Entdecken Sie Entspannung, lassen Sie den Alltag einfach hinter
+              sich - und gönnen Sie sich etwas Zeit für Ihr individuelles
+              Wohlbefinden!</strong
+            >
+            <br />
+            <br />
             Wir laden Sie herzlich ein: Erleben Sie die besondere Atmosphäre in
             den hellen, liebevoll gestalteten Räumlichkeiten unseres
-            Beauty-Centers. Hier bieten wir Ihnen alles rund um Ihr persönliches
-            Wohlgefühl. Auf Wunsch können Sie gerne eine exklusive Behandlung
-            "vom Gesicht bis zu den Füßen" durch 2 Kosmetikerinnen, in einem
-            Termin genießen. Dank unserer über 40-jährigen Erfahrung und einer
-            fundierten Ausbildung in einem renomierten Kosmetikstudio erhalten
-            Sie bei uns auch eine individuelle Beratung und viele Pflegetipps.
+            Beauty-Centers.
+            <br />
+            <br />
+            Hier bieten wir Ihnen alles rund um Ihr persönliches Wohlgefühl. Auf
+            Wunsch können Sie gerne eine exklusive Behandlung "vom Gesicht bis
+            zu den Füßen" durch 2 Kosmetikerinnen, in einem Termin genießen.
+            <br />
+            <br />
+            Dank unserer über 40-jährigen Erfahrung und einer fundierten
+            Ausbildung in einem renomierten Kosmetikstudio erhalten Sie bei uns
+            auch eine individuelle Beratung und viele Pflegetipps.
           </p>
           <img
             src="images/ueber-uns.jpg"
@@ -129,7 +143,7 @@
           />
         </div>
         <div class="col">
-          <h4>So finden Sie uns</h4>
+          <h2>So finden Sie uns</h2>
           <p>
             Neu in unserem Beauty-Center: die Pflegebehandlungen von Clarins.
             Mit den hochwertigen Produkten, in Kombination mit unserer Erfahrung
@@ -141,8 +155,12 @@
       </div>
       <div class="row" id="preise">
         <div class="col">
-          <h4>Preise</h4>
+          <h2>Preise</h2>
           <p>Hier finden Sie unsere aktuelle Preisliste:</p>
+          <a href="images/preisliste_beauty_11_2022_web.pdf" target="blank">
+            <img src="images/icon-pdf.png" alt="" />
+            Preisliste</a
+          >
         </div>
       </div>
       <footer>
