--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div class="container-fluid">
       <div class="header">
         <div class="row align-items-center">
-          <div class="col-6">
+          <div class="col-sm-6">
             <img src="images/logo_beauty.png" alt="Logo Beaty-Center" />
           </div>
-          <div class="col-6 navigation">
+          <div class="col-sm-6 navigation">
             <a href="index.html" class="navigation-item">Start</a>
             <a href="#behandlungen" class="navigation-item">Behandlungen</a>
             <a href="#ueber-uns" class="navigation-item">Über uns</a>
@@ -83,7 +83,7 @@
         </button>
       </div>
       <div class="row" id="behandlungen">
-        <div class="col">
+        <div class="col-sm">
           <h1>Behandlungen für Sie und Ihn</h1>
           <p>
             Unterstreichen Sie Ihre positive Ausstrahlung, genießen Sie einen
@@ -100,7 +100,7 @@
             Energie zurück, die ihr Tag für Tag genommen wird.
           </p>
         </div>
-        <div class="col">
+        <div class="col-sm">
           <h1>Aktuelle Angebote</h1>
           <p>
             Neu in unserem Beauty-Center: die Pflegebehandlungen von Clarins.
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="row" id="ueber-uns">
-        <div class="col">
+        <div class="col-sm">
           <h2>Über uns</h2>
           <p>
             <strong>
@@ -142,7 +142,7 @@
             id="kosmetikerinnen"
           />
         </div>
-        <div class="col">
+        <div class="col-sm">
           <h2>So finden Sie uns</h2>
           <p>
             Neu in unserem Beauty-Center: die Pflegebehandlungen von Clarins.
@@ -154,7 +154,7 @@
         </div>
       </div>
       <div class="row" id="preise">
-        <div class="col">
+        <div class="col-sm">
           <h2>Preise</h2>
           <p>Hier finden Sie unsere aktuelle Preisliste:</p>
           <a href="images/preisliste_beauty_11_2022_web.pdf" target="blank">
@@ -165,11 +165,13 @@
       </div>
       <footer>
         <div class="row">
-          <div class="col-7">
+          <div class="col-sm-7">
             Beauty-Center Roswitha Haas | Gärtnerstraße 28/1 | 77933 Lahr |
             Tel.: 07821 / 98 266 23
           </div>
-          <div class="col-5 impressum-datenschutz">Impressum | Datenschutz</div>
+          <div class="col-sm-5 impressum-datenschutz">
+            Impressum | Datenschutz
+          </div>
         </div>
       </footer>
     </div>
