--- a/index.html
+++ b/index.html
@@ -30,19 +30,45 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="header">
-        <div class="row align-items-center">
-          <div class="col-sm-6">
-            <img src="images/logo_beauty.png" alt="Logo Beaty-Center" />
-          </div>
-          <div class="col-sm-6 navigation">
-            <a href="index.html" class="navigation-item">Start</a>
-            <a href="#behandlungen" class="navigation-item">Behandlungen</a>
-            <a href="#ueber-uns" class="navigation-item">Über uns</a>
-            <a href="#preise" class="navigation-item">Preise</a>
+      <nav class="navbar navbar-expand-lg fixed-top bg-light">
+        <div class="container-fluid">
+          <img
+            src="images/logo_beauty.png"
+            alt="Logo Beaty-Center"
+            class="logo ms-3"
+          />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Start</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#behandlungen">Behandlungen</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#ueber-uns">Über uns</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#preise">Preise</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </div>
+      </nav>
+
       <div
         id="carouselExampleCaptions"
         class="carousel slide"
@@ -140,6 +166,7 @@
             src="images/ueber-uns.jpg"
             alt="Unsere Kosmetikerinnen"
             id="kosmetikerinnen"
+            class="img-fluid rounded shadow-sm p-2 border"
           />
         </div>
         <div class="col-sm">
