--- a/index.html
+++ b/index.html
@@ -29,46 +29,45 @@
     <title>Beauty-Center Roswitha Haas</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg fixed-top bg-light">
-        <div class="container-fluid">
-          <img
-            src="images/logo_beauty.png"
-            alt="Logo Beaty-Center"
-            class="logo ms-3"
-          />
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
-                  >Start</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#behandlungen">Behandlungen</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#ueber-uns">Über uns</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#preise">Preise</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg fixed-top bg-light">
+      <div class="container-fluid">
+        <img
+          src="images/logo_beauty.png"
+          alt="Logo Beaty-Center"
+          class="logo ms-2"
+        />
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Start</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#behandlungen">Behandlungen</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#ueber-uns">Über uns</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#preise">Preise</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-
+      </div>
+    </nav>
+    <div class="container-fluid">
       <div
         id="carouselExampleCaptions"
         class="carousel slide"
@@ -108,6 +107,8 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
+    <div class="container">
       <div class="row" id="behandlungen">
         <div class="col-sm">
           <h1>Behandlungen für Sie und Ihn</h1>
@@ -137,55 +138,62 @@
           </p>
         </div>
       </div>
-      <div class="row" id="ueber-uns">
-        <div class="col-sm">
-          <h2>Über uns</h2>
-          <p>
-            <strong>
-              Entdecken Sie Entspannung, lassen Sie den Alltag einfach hinter
-              sich - und gönnen Sie sich etwas Zeit für Ihr individuelles
-              Wohlbefinden!</strong
-            >
-            <br />
-            <br />
-            Wir laden Sie herzlich ein: Erleben Sie die besondere Atmosphäre in
-            den hellen, liebevoll gestalteten Räumlichkeiten unseres
-            Beauty-Centers.
-            <br />
-            <br />
-            Hier bieten wir Ihnen alles rund um Ihr persönliches Wohlgefühl. Auf
-            Wunsch können Sie gerne eine exklusive Behandlung "vom Gesicht bis
-            zu den Füßen" durch 2 Kosmetikerinnen, in einem Termin genießen.
-            <br />
-            <br />
-            Dank unserer über 40-jährigen Erfahrung und einer fundierten
-            Ausbildung in einem renomierten Kosmetikstudio erhalten Sie bei uns
-            auch eine individuelle Beratung und viele Pflegetipps.
-          </p>
-          <img
-            src="images/ueber-uns.jpg"
-            alt="Unsere Kosmetikerinnen"
-            id="kosmetikerinnen"
-            class="img-fluid rounded shadow-sm p-2 border"
-          />
-        </div>
-        <div class="col-sm">
-          <h2>So finden Sie uns</h2>
-          <p>
-            Neu in unserem Beauty-Center: die Pflegebehandlungen von Clarins.
-            Mit den hochwertigen Produkten, in Kombination mit unserer Erfahrung
-            und unserem Können, erleben Sie eine ganz besondere
-            Schönheitsbehandlung. Und ein wissenschaftlicher Nachweis garantiert
-            zugleich höchste Wirksamkeit.
-          </p>
+    </div>
+    <div class="background-grey">
+      <div class="container">
+        <div class="row rounded" id="ueber-uns">
+          <div class="col-sm">
+            <h2>Über uns</h2>
+            <p>
+              <strong>
+                Entdecken Sie Entspannung, lassen Sie den Alltag einfach hinter
+                sich - und gönnen Sie sich etwas Zeit für Ihr individuelles
+                Wohlbefinden!</strong
+              >
+              <br />
+              <br />
+              Wir laden Sie herzlich ein: Erleben Sie die besondere Atmosphäre
+              in den hellen, liebevoll gestalteten Räumlichkeiten unseres
+              Beauty-Centers.
+              <br />
+              <br />
+              Hier bieten wir Ihnen alles rund um Ihr persönliches Wohlgefühl.
+              Auf Wunsch können Sie gerne eine exklusive Behandlung "vom Gesicht
+              bis zu den Füßen" durch 2 Kosmetikerinnen, in einem Termin
+              genießen.
+              <br />
+              <br />
+              Dank unserer über 40-jährigen Erfahrung und einer fundierten
+              Ausbildung in einem renomierten Kosmetikstudio erhalten Sie bei
+              uns auch eine individuelle Beratung und viele Pflegetipps.
+            </p>
+            <img
+              src="images/ueber-uns.jpg"
+              alt="Unsere Kosmetikerinnen"
+              id="kosmetikerinnen"
+              class="img-fluid rounded shadow-sm p-2 border"
+            />
+          </div>
+          <div class="col-sm">
+            <h2>So finden Sie uns</h2>
+            <p>
+              Neu in unserem Beauty-Center: die Pflegebehandlungen von Clarins.
+              Mit den hochwertigen Produkten, in Kombination mit unserer
+              Erfahrung und unserem Können, erleben Sie eine ganz besondere
+              Schönheitsbehandlung. Und ein wissenschaftlicher Nachweis
+              garantiert zugleich höchste Wirksamkeit.
+            </p>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="container">
       <div class="row" id="preise">
         <div class="col-sm">
           <h2>Preise</h2>
           <p>Hier finden Sie unsere aktuelle Preisliste:</p>
           <a href="images/preisliste_beauty_11_2022_web.pdf" target="blank">
-            <img src="images/icon-pdf.png" alt="" />
+            <img src="images/icon-pdf.png" alt="PDF-Symbol" class="mb-4" />
           </a>
         </div>
       </div>
