--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg fixed-top bg-light">
       <div class="container-fluid">
         <img
-          src="images/logo_beauty.png"
+          src="/images/logo_beauty.png"
           alt="Logo Beaty-Center"
           class="logo ms-2"
         />
@@ -75,14 +75,14 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/beauty_web.jpg" class="d-block w-100" alt="..." />
+            <img src="/images/beauty_web.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="images/fusse_web.jpg" class="d-block w-100" alt="..." />
+            <img src="/images/fusse_web.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
             <img
-              src="images/gesicht_web_0.jpg"
+              src="/images/gesicht_web_0.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -168,7 +168,7 @@
               uns auch eine individuelle Beratung und viele Pflegetipps.
             </p>
             <img
-              src="images/ueber-uns.jpg"
+              src="/images/ueber-uns.jpg"
               alt="Unsere Kosmetikerinnen"
               id="kosmetikerinnen"
               class="img-fluid rounded shadow-sm p-2 border"
@@ -196,8 +196,8 @@
         <div class="col-sm">
           <h2>Preise</h2>
           <p>Hier finden Sie unsere aktuelle Preisliste:</p>
-          <a href="images/preisliste_beauty_11_2022_web.pdf" target="blank">
-            <img src="images/icon-pdf.png" alt="PDF-Symbol" class="mb-4" />
+          <a href="/images/preisliste_beauty_11_2022_web.pdf" target="blank">
+            <img src="/images/icon-pdf.png" alt="PDF-Symbol" class="mb-4" />
           </a>
         </div>
       </div>
