--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#behandlungen">Behandlungen</a>
+              <a class="nav-link" href="/#behandlungen">Behandlungen</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#ueber-uns">Über uns</a>
+              <a class="nav-link" href="/#ueber-uns">Über uns</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#preise">Preise</a>
+              <a class="nav-link" href="/preise.html">Preise</a>
             </li>
           </ul>
         </div>
@@ -192,15 +192,6 @@
       </div>
     </div>
     <div class="container">
-      <div class="row" id="preise">
-        <div class="col-sm">
-          <h2>Preise</h2>
-          <p>Hier finden Sie unsere aktuelle Preisliste:</p>
-          <a href="/images/preisliste_beauty_11_2022_web.pdf" target="blank">
-            <img src="/images/icon-pdf.png" alt="PDF-Symbol" class="mb-4" />
-          </a>
-        </div>
-      </div>
       <footer>
         <div class="row">
           <div class="col-sm-7">
@@ -208,7 +199,8 @@
             Tel.: 07821 / 98 266 23
           </div>
           <div class="col-sm-5 impressum-datenschutz">
-            Impressum | Datenschutz
+            <a href="/impressum.html">Impressum</a> |
+            <a href="/datenschutz.html">Datenschutz</a>
           </div>
         </div>
       </footer>
