Added site "Preise"

--- a/preise.html
+++ b/preise.html
@@ -67,9 +67,214 @@
         </div>
       </div>
     </nav>
+    <div class="background-grey py-2">
+      <div class="container preise">
+        <h1>Preise</h1>
+        <div class="row mt-3">
+          <div class="col-md">
+            <h4>Die Pflegebehandlungen von Clarins</h4>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Tiefenreinigung für jede Haut</h5>
+                Peeling, gründliches Entfernen von Hautunreinheiten,
+                Desinfektion mit Sauerstoff, Maske, Abschlusspflege
+              </div>
+              <div class="col-2">38,-</div>
+            </div>
+            <div class="row mt-3 mt-3">
+              <div class="col-9">
+                <h5>Verwöhnstunde fürs Gesicht</h5>
+                Hautreinigung, ausgiebige Gesichts-, Hals- und Dekolletéund
+                Nackenmassage, Maske, Abschlusspflege
+              </div>
+              <div class="col-2">40,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Kleine klassische Gesichtsbehandlung</h5>
+                Peeling, Entfernen von Hautunreinheiten, Augebrauenkorrektur,
+                Desinfektion mit Sauerstoff, Gesichts- und Halsmassage, Maske,
+                Abschlusspflege
+              </div>
+              <div class="col-2">48,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Große klassische Gesichtsbehandlung</h5>
+                Peeling, Entfernen von Hautunreinheiten, Augenbrauenkorrektur,
+                Desinfektion mit Sauerstoff, Gesichts-, Hals, Dekolleté und
+                Nackenmassage, Maske, Abschlusspflege
+              </div>
+              <div class="col-2">58,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Regenerationsbehandlung - Purer Genuss -</h5>
+                Wie große klassische Behandlung, zusätzlich mit
+                Wirkstoffkonzentrat und Spezialmaske
+              </div>
+              <div class="col-2">65,-</div>
+            </div>
+            <div class="row mt-3">
+              <h4>Warmwachsenthaarungen</h4>
+              <div class="col-9">Brauen</div>
+              <div class="col-2">ab 8,50</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Oberlippe</div>
+              <div class="col-2">ab 7,50</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Kinn</div>
+              <div class="col-2">ab 7,50</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Achsel</div>
+              <div class="col-2">15,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Bikini</div>
+              <div class="col-2">15,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Arme</div>
+              <div class="col-2">15,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Brust</div>
+              <div class="col-2">ab 25,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Rücken</div>
+              <div class="col-2">ab 25,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Beine bis Knie</div>
+              <div class="col-2">25,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Beine ganz</div>
+              <div class="col-2">ab 45,-</div>
+            </div>
+            <div class="row mt-3">
+              <h4>Färben</h4>
+              <div class="col-9">Brauen</div>
+              <div class="col-2">12,50</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Wimpern</div>
+              <div class="col-2">12,50</div>
+            </div>
+          </div>
+          <div class="col-md">
+            <h4>Spezial-Gesichtsbehandlungen</h4>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Mesoporations-Behandlung</h5>
+                Die sanfte Anti-Aging Waffe! <br />
+                Faltenglättung und Aufpolsterung auf höchstem Niveau
+              </div>
+              <div class="col-2">55,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Micro Needling</h5>
+                Das natürliche Face-Lift ohne OP! <br />Verminderung von Falten
+                und Linien, Aufhellung von Pigmentstörungen, Porenverkleinerung
+                und Verfeinerung des Hautbildes
+              </div>
+              <div class="col-2">67,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Diamant Mikrodermabrasion</h5>
+                Die Luxusbehandlung mit Diamanten! br (Nur in Verbindung mit
+                einer Pflegebehandlung möglich)
+              </div>
+              <div class="col-2">12,50</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Fruchtsäure-Behandlung</h5>
+                Verfeinerung des Hautbildes, Minderung von Pigmentflecken
+              </div>
+              <div class="col-2">25,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Ultraschall-Behandlung</h5>
+                Mikromassage und einschleusen von Wirkstoffen.
+              </div>
+              <div class="col-2">35,-</div>
+            </div>
+            <div class="row mt-3">
+              <h5>Wohlfühlbehandlungen für Hände und Füße</h5>
+            </div>
+            <div class="row">
+              <div class="col-9">Maniküre</div>
+              <div class="col-2">29,- / 33,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">
+                Handpeeling mit Paraffinpackung 23,- und ausgiebiger Handmassage
+              </div>
+              <div class="col-2">23,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">Pediküre</div>
+              <div class="col-2">29,- / 33,-</div>
+            </div>
+            <div class="row">
+              <div class="col-9">
+                Fußpeeling mit Paraffinpackung und ausgiebiger Fußmassage
+              </div>
+              <div class="col-2">23,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Wohlfühlbehandlung für Ihren Rücken</h5>
+                Rückenpeeling, gründliches Entfernen von Hautunreinheiten,
+                Desinfektion mit Sauerstoff, Abschlusspflege
+              </div>
+              <div class="col-2">35,-</div>
+            </div>
+
+            <div class="row mt-3">
+              <h3>LONG-TIME-LINER</h3>
+              <h4>Conture Make up</h4>
+              <h4>Das Dauer-Make-up für</h4>
+              <div class="col-9">
+                <h5>Ihre Lidstriche oben/unten inkl. 2 Nacharbeiten</h5>
+                Die Augen sind der Spiegel der Seele. <br />
+                Lassen Sie sie strahlen mit einer ganz natürlichen
+                Wimpernkranzverdichtung oder perfekten dekorativen Lidstrichen.
+              </div>
+              <div class="col-2">je 200,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Ihre Augenbrauen oben/unten inkl. 2 Nacharbeiten</h5>
+                Die Augenbrauen sind der Rahmen Ihres Gesichtes und verleihen
+                Ihnen Ausdruck. Erleben Sie perfekt geformte Augenbrauen in
+                feinster Härchenzeichnung.
+              </div>
+              <div class="col-2">400,-</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <h5>Ihre Lippen inkl. 2 Nacharbeiten</h5>
+                Zeigen Sie Ihre Sinnlichkeit mit ausdrucksstarken Lippenkonturen
+                und Vollschattierung.
+              </div>
+              <div class="col-2">600,-</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <footer>
-        <div class="row">
+        <div class="row mt-3">
           <div class="col-sm-7">
             Beauty-Center Roswitha Haas | Gärtnerstraße 28/1 | 77933 Lahr |
             Tel.: 07821 / 98 266 23
