--- a/datenschutz.html
+++ b/datenschutz.html
@@ -67,7 +67,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container datenschutz">
       <h1>Datenschutzerklärung</h1>
       <h2>Datenschutz</h2>
       <p>
@@ -87,9 +87,9 @@
 
       <h2>Hinweis zur verantwortlichen Stelle</h2>
       <p>
-        Die verantwortliche Stelle für die Datenverarbeitung auf dieser
-        Website ist: Beauty-Center Roswitha Haas Gärtnerstraße 28/1 77933 Lahr
-        Telefon: +49 (0) 7821 98 266 23 E-Mail: info@beauty-center-haas.de
+        Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website
+        ist: Beauty-Center Roswitha Haas Gärtnerstraße 28/1 77933 Lahr Telefon:
+        +49 (0) 7821 98 266 23 E-Mail: info@beauty-center-haas.de
         Verantwortliche Stelle ist die natürliche oder juristische Person, die
         allein oder gemeinsam mit anderen über die Zwecke und Mittel der
         Verarbeitung von personenbezogenen Daten (z.B. Namen, E-Mail-Adressen o.
