--- a/preise.html
+++ b/preise.html
@@ -216,7 +216,7 @@
             </div>
             <div class="row">
               <div class="col-9">
-                Handpeeling mit Paraffinpackung 23,- und ausgiebiger Handmassage
+                Handpeeling mit Paraffinpackung und ausgiebiger Handmassage
               </div>
               <div class="col-2">23,-</div>
             </div>
