Styling of "Datenschutz" page

--- a/impressum.html
+++ b/impressum.html
@@ -94,9 +94,9 @@
       <p>
         Die Rechte aller auf dieser Website verwendeten Bilder liegen, sofern
         nicht anders angegeben, beim Betreiber der Webseite.
-        <br /><br />
-        Bildagenturen: © <a href="https://de.fotolia.com/">Fotolia.com</a>
-        <br /><br />
+      </p>
+      <p>Bildagenturen: © <a href="https://de.fotolia.com/">Fotolia.com</a></p>
+      <p>
         Die Webseite enthält Bildmaterial von folgenden Urhebern: 21628964,
         49935447, 56563514, 57362697, 57897396, 63585310, 64918397, 58652855,
         45234260
