--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
     <div class="container">
       <div class="row" id="behandlungen">
-        <div class="col-sm">
+        <div class="col-sm pb-3">
           <h1>Behandlungen für Sie und Ihn</h1>
           <p>
             Unterstreichen Sie Ihre positive Ausstrahlung, genießen Sie einen
