Improved responsiveness of footer

--- a/impressum.html
+++ b/impressum.html
@@ -55,10 +55,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#behandlungen">Behandlungen</a>
+              <a class="nav-link" href="/#behandlungen">Behandlungen</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#ueber-uns">Über uns</a>
+              <a class="nav-link" href="/#ueber-uns">Über uns</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/preise.html">Preise</a>
@@ -157,6 +157,8 @@
         77933 Lahr <br />
         Tel.: 07821 / 98 266 23
       </p>
+    </div>
+    <div class="container-fluid">
       <footer>
         <div class="row">
           <div class="col-sm-7">
