--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
     <div class="container">
       <div class="row" id="behandlungen">
-        <div class="col-sm pb-3">
+        <div class="col-md pb-3">
           <h1>Behandlungen für Sie und Ihn</h1>
           <p>
             Unterstreichen Sie Ihre positive Ausstrahlung, genießen Sie einen
@@ -127,7 +127,7 @@
             Energie zurück, die ihr Tag für Tag genommen wird.
           </p>
         </div>
-        <div class="col-sm">
+        <div class="col-md reduced-spacing">
           <h1>Aktuelle Angebote</h1>
           <p>
             Neu in unserem Beauty-Center: die Pflegebehandlungen von Clarins.
@@ -142,7 +142,7 @@
     <div class="background-grey">
       <div class="container">
         <div class="row rounded" id="ueber-uns">
-          <div class="col-sm">
+          <div class="col-md">
             <h2>Über uns</h2>
             <p>
               <strong>
@@ -174,9 +174,9 @@
               class="img-fluid rounded shadow-sm p-2 border"
             />
           </div>
-          <div class="col-sm">
+          <div class="col-md reduced-spacing">
             <h2>So finden Sie uns</h2>
-            <div class="map">
+            <div class="map pb-5">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2652.0585745063718!2d7.873293275218941!3d48.3401794370363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47912e45711161b7%3A0x27f8ae3a26a2d32!2sBeauty-Center%20Roswitha%20Haas!5e0!3m2!1sde!2sde!4v1679860291854!5m2!1sde!2sde"
                 width="100%"
@@ -191,14 +191,14 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <footer>
         <div class="row">
-          <div class="col-sm-7">
+          <div class="col-md-7">
             Beauty-Center Roswitha Haas | Gärtnerstraße 28/1 | 77933 Lahr |
             Tel.: 07821 / 98 266 23
           </div>
-          <div class="col-sm-5 impressum-datenschutz">
+          <div class="col-md-5 impressum-datenschutz">
             <a href="/impressum.html">Impressum</a> |
             <a href="/datenschutz.html">Datenschutz</a>
           </div>
