--- a/preise.html
+++ b/preise.html
@@ -55,10 +55,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#behandlungen">Behandlungen</a>
+              <a class="nav-link" href="/#behandlungen">Behandlungen</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#ueber-uns">Über uns</a>
+              <a class="nav-link" href="/#ueber-uns">Über uns</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/preise.html">Preise</a>
@@ -272,7 +272,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <footer>
         <div class="row mt-3">
           <div class="col-sm-7">
